# template-system

./: .coverage  .coveragerc  .gitignore  Dockerfile  README.md  main.py  main_service.py  pyproject.toml  settings.toml
template_system/: domain.py
template_system/adapters/web/: __init__.py  template_applier_controller.py
template_system/api/: app.py  export_pdf_from_docx.py  recover_exported_from_link.py
template_system/application/: __init__.py  template_service.py
template_system/application/protocols/: __init__.py  template_applier.py  template_data.py  template_exporter.py  template_repository.py
template_system/errors/: __init__.py  incompatible_template_and_exporter_error.py  invalid_template_exporter_error.py  no_exporter_registered_error.py  template_process_error.py
template_system/template_exporter/docx_to_pdf/: __init__.py  libreoffice_docx_to_pdf_exporter.py  test_docx_template_vars_applier.py
template_system/utils/: __init__.py  remove_file.py
tests/: test_template_service.py  test_utils.py
tests/helpers/: __init__.py  stub_docx_vars_applier.py  stub_exporter.py
tests/test_api/: test_docx_to_pdf_generation.py
tests/test_template_exporters/: docx_template.docx  test_libreoffice_docx_to_pdf_exporter.py
